# ggplot-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/plot-data/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: pipeline.rs
docs/: WEB_INTERACTIVITY.md
examples/: annotations.rs  bar_chart.rs  color_palettes.rs  continuous_color.rs  coord_flip.rs  density.rs  faceted.rs  gallery.rs  ggpubr_gallery.rs  histogram.rs  loess_smooth.rs  log_scale.rs  scatter.rs  spatial.rs  supplier_leadtime.rs
src/: annotate.rs  build.rs  ggpubr.rs  lib.rs  plot.rs  prelude.rs  wasm.rs
src/aes/: expr.rs  mapping.rs  mod.rs
src/coord/: cartesian.rs  fixed.rs  flip.rs  mod.rs  polar.rs  sf.rs  trans.rs
src/data/: dataframe.rs  mod.rs  source.rs
src/facet/: grid.rs  mod.rs  wrap.rs
src/geom/: area.rs  bar.rs  bin2d.rs  blank.rs  boxplot.rs  bracket.rs  col.rs  contour.rs  count.rs  crossbar.rs  curve.rs  density.rs  density2d.rs  dotplot.rs  errorbar.rs  freqpoly.rs  hex.rs  histogram.rs  jitter.rs  line.rs  linerange.rs  mod.rs  path.rs  point.rs  pointrange.rs  polygon.rs  qq.rs  raster.rs  rect.rs  refline.rs  ribbon.rs  rug.rs  segment.rs  sf.rs  smooth.rs  spoke.rs  step.rs  text.rs  tile.rs  violin.rs
src/guide/: axis.rs  config.rs  legend.rs  mod.rs
src/position/: dodge.rs  dodge2.rs  fill.rs  identity.rs  jitter.rs  jitterdodge.rs  mod.rs  nudge.rs  stack.rs
src/render/: backend.rs  layout.rs  mod.rs  pixel_backend.rs  plotters_backend.rs  renderer.rs  svg_backend.rs
src/scale/: alpha.rs  color.rs  continuous.rs  datetime.rs  discrete.rs  format.rs  gradient.rs  gradient_n.rs  grey.rs  linetype.rs  linetype_manual.rs  manual.rs  mod.rs  modified.rs  palettes.rs  scale_set.rs  sec_axis.rs  shape.rs  shape_manual.rs  size.rs  steps.rs  transform.rs  util.rs
src/spatial/: geojson.rs  mod.rs
src/stat/: bin.rs  bin2d.rs  bindot.rs  binhex.rs  boxplot.rs  compare_means.rs  contour.rs  contour_filled.rs  cor.rs  count.rs  density.rs  density2d.rs  dist.rs  ecdf.rs  ellipse.rs  function.rs  identity.rs  loess.rs  marching_squares.rs  mod.rs  qq.rs  quantile.rs  smooth.rs  sum.rs  summary.rs  summary2d.rs  summary_bin.rs  ydensity.rs
src/theme/: config.rs  elements.rs  mod.rs  presets.rs
tests/: a58_polar.rs  a59_fonts.rs  a60_serde_config.rs  a63_backend.rs  canvas.rs  cov_builder.rs  cov_gaps.rs  cov_gaps2.rs  cov_geoms.rs  cov_scales.rs  cov_stats_data.rs  cov_themes.rs  extended_breaks_r.rs  gam_smooth.rs  ggpubr_basics.rs  ggpubr_bracket.rs  ggpubr_compare_means.rs  ggpubr_stat_cor.rs  integration.rs  issue10_glm_smooth.rs  issue11_quantile.rs  issue12_ellipse.rs  issue13_transforms.rs  issue14_binned.rs  issue15_filled_contours.rs  issue16_raster_summary2d.rs  issue17_coordtrans.rs  issue19_axis.rs  issue19_datetime.rs  issue20_formatters.rs  issue21_facet_stat.rs  issue21_space.rs  issue22_axis_angle.rs  issue22_legend_inside.rs  issue22_tag_dodge.rs  issue46_linetype.rs  issue47_face.rs  issue48_hjust.rs  issue49_inheritance.rs  issue50_advanced.rs  (+11 more)
validation/: README.md  generate_all.R
validation/fixtures/: position_dodge.csv  position_fill.csv  position_stack.csv  scale_continuous_breaks.csv  stat_bin.csv  stat_bin2d.csv  stat_binhex.csv  stat_boxplot.csv  stat_count.csv  stat_density.csv  stat_ecdf.csv  stat_qq.csv  stat_qq_line.csv  stat_smooth_lm.csv  stat_smooth_loess.csv  stat_summary.csv  stat_ydensity.csv
validation/fixtures/data/: bin2d_input.csv  boxplot_groups.csv  grouped_bars.csv  normal_200.csv  position_input.csv  qq_input.csv  smooth_input.csv  summary_input.csv  uniform_100.csv
web/: README.md  gl.js  index.html  main.js
web/e2e/: .gitignore  README.md  package.json  smoke.mjs
